fix(satellitecircle): svg overflow visible

--- a/components/ui/SatelliteCircle/SatelliteCircle.less
+++ b/components/ui/SatelliteCircle/SatelliteCircle.less
@@ -8,4 +8,9 @@
   border-radius: @half;
   font-weight: 500;
   color: #fff;
+  background-color: red;
+
+  svg {
+    overflow: visible;
+  }
 }
